--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   font-family: "Open Sans", sans-serif;
   background: linear-gradient(180deg, rgba(227, 255, 248, 0.00) 82.08%, rgba(227, 255, 248, 0.38) 100%);
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .page {
@@ -103,23 +104,96 @@ button {
   transition: 0.2s;
 }
 
+.destaque {
+  border: 2px solid rgba(0, 0, 0, 0.5);
+}
+
+.hidden_about {
+  display: none;
+}
+
+.not_hidden {
+  display: block;
+}
+
+div.blur {
+  filter: blur(5px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  pointer-events: none;
+  z-index: 10;
+  transition: 1.2s;
+}
+
+div #upfor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+div #about h2 {
+  font-family: "Mulish", sans-serif;
+  color: #1F1534;
+  font-weight: bold;
+}
+
+div #about p {
+  font-size: 14px;
+  font-weight: normal;
+  color: #7D7987;
+}
+
+div #about {
+  text-align: center;
+  border-radius: 45px;
+  width: 600px;
+  height: 300px;
+  background: rgb(185, 180, 180, 0.7);
+  border: 3px solid rgba(0, 0, 0, 0.116);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 20;
+
+}
+
+#closeAbout {
+  color: black;
+  position: absolute;
+  top: 22.5px;
+  right: 22.5px;
+  cursor: pointer;
+}
+
 button:hover {
   background: #58a68b;
   transition: 0.2s;
 }
 
+h1,
+p {
+  pointer-events: none;
+}
+
 footer {
-  margin-top: 80px;
   text-align: center;
   font-size: 14px;
   line-height: 28px;
   color: #1F1534;
+  pointer-events: none;
 }
+
 
 footer a {
   text-decoration: none;
   font-weight: bold;
   color: #1F1534;
+  pointer-events: visible;
 }
 
 #balls {
